# rosws

./: README.md
install/: local_setup.sh  setup.sh
install/diffdrive_bot/share/diffdrive_bot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mobilebot/share/mobilebot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mobilebot_controller/share/mobilebot_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot/share/robot/: package.sh  package.xml
install/ros_gz_sim/lib/ros_gz_sim/: create  (+1 more)
log/: latest_build
src/diffdrive_bot/: CMakeLists.txt  package.xml
src/diffdrive_bot/meshes/: body.mtl  wheel_left_side.stl
src/diffdrive_bot/urdf/: links.xacro
src/mobilebot/: CMakeLists.txt  package.xml
src/mobilebot/launch/: gazebo.launch.py  rviz.launch.py
src/mobilebot/meshes/: body.stl
src/mobilebot/urdf/: gazebo.xacro  joints.xacro  links.xacro  robot.urdf.xacro  ros2_control.xacro
src/mobilebot_controller/: CMakeLists.txt
src/mobilebot_controller/config/: manipulator_controller.yaml
src/mobilebot_controller/launch/: controller.launch.py
src/robot/: setup.py
src/robot_description/: CMakeLists.txt
src/robot_description/launch/: gazebo.launch.py
src/robot_description/meshes/: Gripper.stl
src/robot_description/urdf/: gazebo.xacro  joints.xacro  links.xacro  robot.urdf.xacro  transmission.xacro
(+871 files in other folders)
